k8s/guestbook/solutions/3-guestbook-deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: guestbook
  name: guestbook
  namespace: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  strategy: {}
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - image: myregistry:5000/guestbook-frontend:v3
        name: guestbook-frontend
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 8080
        resources: {}
