k8s/guestbook/solutions/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: load-generator
  name: load-generator
  namespace: guestbook
spec:
  containers:
  - args:
    - sh
    - -c
    - while true; do wget -q -O- http://guestbook.kind; done
    image: busybox
    name: load-generator
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
