k8s/guestbook/solutions/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guestbook
  name: guestbook
  namespace: guestbook
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: guestbook
status:
  loadBalancer: {}
