k8s/guestbook/solutions/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  namespace: guestbook
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.kind
    http:
      paths:
      - backend:
          service:
            name: guestbook
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
